k8s/keycloak.yaml
# Postgres Service
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort
  ports:
    - port: 8180
      targetPort: 8180
      nodePort: 30002
  selector:
    app: kc
